fix scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,11 @@ p {
   }
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
